Add and use a tracking protection pref.

--- a/app/src/main/res/layout/custom_drawer_item.xml
+++ b/app/src/main/res/layout/custom_drawer_item.xml
@@ -127,6 +127,7 @@
     </LinearLayout>
 
     <Switch
+        android:id="@+id/tracking_protection_switch"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="6dp"
