--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!-- This Source Code Form is subject to the terms of the Mozilla Public
+<?xml version="1.0" encoding="utf-8"?><!-- This Source Code Form is subject to the terms of the Mozilla Public
    - License, v. 2.0. If a copy of the MPL was not distributed with this
    - file, You can obtain one at http://mozilla.org/MPL/2.0/. -->
 <resources xmlns:tools="http://schemas.android.com/tools">
@@ -28,7 +27,8 @@
 
     <dimen name="floating_action_button_size">56dp</dimen>
 
-    <dimen name="adaptive_icon_drawable_dimen">108dp</dimen> <!-- Specified in AdaptiveIconDrawable docs. -->
+    <dimen name="adaptive_icon_drawable_dimen">108dp
+    </dimen> <!-- Specified in AdaptiveIconDrawable docs. -->
 
     <dimen name="dialogHorizontalPadding">24dp</dimen>
 
@@ -43,4 +43,5 @@
     <dimen name="textinputlayout_spacing">8dp</dimen>
 
     <dimen name="home_tile_corner_radius">4dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
 </resources>
