--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -69,4 +69,7 @@
     <color name="ink70">#474959</color>
     <color name="ink80">#333540</color>
     <color name="homeUrlBarBackground">#30ffffff</color>
+
+    <color name="onboarding_background">#ffffff</color>
+    <color name="onboarding_overlay">#cc000000</color>
 </resources>
