--- a/app/src/main/res/layout/content_onboarding.xml
+++ b/app/src/main/res/layout/content_onboarding.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
+    android:background="@color/onboarding_background"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="org.mozilla.focus.activity.OnboardingActivity"
     tools:showIn="@layout/activity_onboarding">
@@ -35,6 +36,13 @@
                 android:scaleType="fitCenter"
                 app:srcCompat="@drawable/ic_turbo_illustration" />
 
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/onboarding_overlay">
+
+            </RelativeLayout>
+
             <TextView
                 android:id="@+id/turbo_mode_title"
                 android:layout_width="wrap_content"
@@ -54,12 +62,8 @@
                 android:layout_below="@+id/turbo_mode_title"
                 android:layout_marginStart="306dp"
                 android:layout_marginTop="30dp"
-<<<<<<< HEAD
                 android:text="@string/onboarding_turbo_mode_body"
-=======
                 android:paddingEnd="20dp"
-                android:text="@string/onboarding_turbo_mode_caption"
->>>>>>> button styles
                 android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                 tools:text="@string/onboarding_turbo_mode_body" />
         </RelativeLayout>
@@ -87,14 +91,9 @@
                 style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-<<<<<<< HEAD
+
                 android:text="@string/onboarding_turbo_mode_button_off"
                 tools:text="@string/onboarding_turbo_mode_button_off" />
-=======
-                android:layout_marginTop="8dp"
-                android:text="@string/onboarding_turbo_mode_button_disable"
-                tools:text="@string/onboarding_turbo_mode_button_disable" />
->>>>>>> button styles
         </LinearLayout>
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
