--- a/app/src/main/res/layout/content_onboarding.xml
+++ b/app/src/main/res/layout/content_onboarding.xml
@@ -81,19 +81,22 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/onboarding_turbo_mode_button_on"
-                tools:text="@string/onboarding_turbo_mode_button_on">
-
+                tools:text="@string/onboarding_turbo_mode_button_on"
+                android:nextFocusDown="@+id/disable_turbo_mode"
+                android:nextFocusUp="@id/disable_turbo_mode">
                 <requestFocus />
             </Button>
 
             <Button
-                android:id="@+id/disable_turbo_mode"
+                android:id="@id/disable_turbo_mode"
                 style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-
                 android:text="@string/onboarding_turbo_mode_button_off"
-                tools:text="@string/onboarding_turbo_mode_button_off" />
+                tools:text="@string/onboarding_turbo_mode_button_off"
+                android:nextFocusDown="@id/enable_turbo_mode"
+                android:nextFocusUp="@id/enable_turbo_mode" />
+
         </LinearLayout>
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
