--- a/app/src/main/res/layout/content_onboarding.xml
+++ b/app/src/main/res/layout/content_onboarding.xml
@@ -78,8 +78,11 @@
             <Button
                 android:id="@+id/enable_turbo_mode"
                 style="@style/Widget.AppCompat.Button.Borderless"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp"
+                android:background="@drawable/nav_button_selector"
                 android:text="@string/onboarding_turbo_mode_button_on"
                 tools:text="@string/onboarding_turbo_mode_button_on"
                 android:nextFocusDown="@+id/disable_turbo_mode"
@@ -90,8 +93,11 @@
             <Button
                 android:id="@id/disable_turbo_mode"
                 style="@style/Widget.AppCompat.Button.Borderless"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp"
+                android:background="@drawable/nav_button_selector"
                 android:text="@string/onboarding_turbo_mode_button_off"
                 tools:text="@string/onboarding_turbo_mode_button_off"
                 android:nextFocusDown="@id/enable_turbo_mode"
