Closes #383: Rm up/down nextFocus in settings.
This is confusing to non-visual users and more work for us to maintain.

--- a/app/src/main/res/layout/fragment_new_settings.xml
+++ b/app/src/main/res/layout/fragment_new_settings.xml
@@ -47,9 +47,7 @@
             android:layout_weight="1"
             android:orientation="vertical"
             android:id="@+id/telemetryView"
-            android:nextFocusUp="@+id/aboutButton"
-            android:nextFocusRight="@id/aboutButton"
-            android:nextFocusDown="@+id/deleteButton"
+            android:nextFocusRight="@+id/aboutButton"
             android:background="@drawable/settings_item_selector"
             android:focusable="true"
             android:layout_gravity="center_vertical">
@@ -75,10 +73,8 @@
 
         <LinearLayout
             android:id="@id/aboutButton"
-            android:nextFocusUp="@+id/privacyNoticeButton"
-            android:nextFocusRight="@id/privacyNoticeButton"
+            android:nextFocusRight="@+id/privacyNoticeButton"
             android:nextFocusLeft="@id/telemetryView"
-            android:nextFocusDown="@id/telemetryView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -111,10 +107,8 @@
             android:background="@drawable/settings_item_selector"
             android:clickable="true"
             android:focusable="true"
-            android:nextFocusDown="@id/aboutButton"
             android:nextFocusLeft="@id/aboutButton"
-            android:nextFocusRight="@id/deleteButton"
-            android:nextFocusUp="@id/deleteButton"
+            android:nextFocusRight="@+id/deleteButton"
             android:orientation="vertical">
             <TextView
                     android:layout_width="wrap_content"
@@ -134,11 +128,9 @@
         </LinearLayout>
 
         <LinearLayout
-            android:id="@+id/deleteButton"
-            android:nextFocusUp="@id/telemetryView"
+            android:id="@id/deleteButton"
             android:nextFocusRight="@id/telemetryView"
             android:nextFocusLeft="@id/privacyNoticeButton"
-            android:nextFocusDown="@id/privacyNoticeButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
