Add layout for basic browser overlay

--- a/app/src/main/res/layout/fragment_browser.xml
+++ b/app/src/main/res/layout/fragment_browser.xml
@@ -44,4 +44,7 @@
         android:id="@+id/cursor"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
+
+    <include android:id="@+id/browserOverlay"
+        layout="@layout/browser_overlay"/>
 </FrameLayout>
