--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -73,4 +73,6 @@
     <color name="onboarding_background">#ffffff</color>
     <color name="onboarding_overlay">#cc000000</color>
     <color name="onboarding_button_highlight">#500060df</color>
+
+    <color name="browser_overlay_background">#cc000000</color>
 </resources>
