--- a/app/src/main/res/layout/fragment_browser.xml
+++ b/app/src/main/res/layout/fragment_browser.xml
@@ -45,6 +45,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-    <include android:id="@+id/browserOverlay"
-        layout="@layout/browser_overlay"/>
+    <org.mozilla.focus.widget.BrowserNavigationOverlay
+        android:id="@+id/browserOverlay"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 </FrameLayout>
