--- a/app/src/main/res/layout/browser_overlay.xml
+++ b/app/src/main/res/layout/browser_overlay.xml
@@ -7,7 +7,8 @@
     android:layout_height="match_parent"
     android:background="@color/browser_overlay_background"
     android:orientation="vertical"
-    android:paddingStart="20dp">
+    android:paddingStart="20dp"
+    android:visibility="invisible">
 
     <LinearLayout
         android:id="@+id/topButtonRow"
