--- a/app/src/main/res/layout/browser_overlay.xml
+++ b/app/src/main/res/layout/browser_overlay.xml
@@ -65,6 +65,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             style="@style/NavigationButton"
+            android:focusable="false"
             android:src="@drawable/ic_search"
             android:importantForAccessibility="no"/>
 
