Issue #412: Don't allocate in onDraw.
The update loop still allocates (due to iterators and the coroutine framework)
but this should make it easier to reduce allocations later.

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -45,4 +45,7 @@
     <dimen name="home_tile_corner_radius">4dp</dimen>
 
     <dimen name="fab_margin">16dp</dimen>
+
+    <dimen name="remote_cursor_size">45dp</dimen>
+    <dimen name="remote_cursor_size2x">90dp</dimen>
 </resources>
