--- a/app/src/main/res/layout/fragment_browser.xml
+++ b/app/src/main/res/layout/fragment_browser.xml
@@ -3,6 +3,7 @@
    - License, v. 2.0. If a copy of the MPL was not distributed with this
    - file, You can obtain one at http://mozilla.org/MPL/2.0/. -->
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/browserFragmentRoot"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
@@ -42,8 +43,10 @@
 
     <org.mozilla.focus.browser.cursor.CursorView
         android:id="@+id/cursorView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_width="@dimen/remote_cursor_size"
+        android:layout_height="@dimen/remote_cursor_size"
+        android:layout_gravity="top|start"
+        />
 
     <org.mozilla.focus.widget.BrowserNavigationOverlay
         android:id="@+id/browserOverlay"
