--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,73 +2,11 @@
 <!-- This Source Code Form is subject to the terms of the Mozilla Public
    - License, v. 2.0. If a copy of the MPL was not distributed with this
    - file, You can obtain one at http://mozilla.org/MPL/2.0/. -->
-<!-- Ignore MergeRootFrame: we need a single container View where we can attach fragments, so
-     we definitely need to keep this FrameLayout (i.e. we can't <merge> here). -->
-<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/drawer_layout"
-    tools:ignore="MergeRootFrame"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
+    android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
-    tools:openDrawer="start">
+    android:focusable="true">
+</LinearLayout>
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <!-- This view must be specified first so that it's focused first when other views (e.g. menu drawer)
-             lose focus. This is important for VoiceTalk: when links are clicked, we must continue to focus
-             the WebView, otherwise users in Review Mode will stop having WebView-specific options (like
-             navigating by links). -->
-        <LinearLayout
-            android:orientation="vertical"
-            android:id="@+id/container"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentStart="true"
-            android:focusable="true"
-            android:descendantFocusability="afterDescendants">
-        </LinearLayout>
-    </RelativeLayout>
-
-    <android.support.design.widget.NavigationView
-        android:id="@+id/navigation"
-        android:background="@drawable/drawer_background"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_gravity="start"
-        android:focusable="true"
-        android:nextFocusRight="@id/container"
-        android:descendantFocusability="afterDescendants">
-        <LinearLayout
-            android:background="@android:color/transparent"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-
-            <include android:id="@+id/custom_button_layout"
-                layout="@layout/custom_drawer_item" />
-
-            <View android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@color/colorTextInactive"
-                android:layout_marginStart="15dp"
-                android:layout_marginEnd="15dp"/>
-
-            <!-- Double navigation view is a workaround so that we could add the custom layout above -->
-            <android.support.design.widget.NavigationView
-                android:paddingTop="48dp"
-                android:background="@android:color/transparent"
-                android:id="@+id/fragment_navigation"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_gravity="start"
-                app:menu="@menu/menu_home_drawer" />
-
-        </LinearLayout>
-    </android.support.design.widget.NavigationView>
-</android.support.v4.widget.DrawerLayout>
