--- a/app/src/main/res/layout/browser_overlay.xml
+++ b/app/src/main/res/layout/browser_overlay.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:background="@color/browser_overlay_background"
     android:orientation="vertical"
-    android:paddingStart="20dp">
+    android:padding="20dp">
 
     <LinearLayout
         android:id="@+id/topButtonRow"
@@ -79,6 +79,7 @@
             android:hint="@string/urlbar_hint"
             android:imeOptions="actionGo|flagNoExtractUi|flagNoFullscreen"
             android:paddingStart="10dp"
+            android:layout_marginStart="12dp"
             android:inputType="textUri"
             android:lines="1"
             android:selectAllOnFocus="true"
