--- a/app/src/main/res/layout/fragment_browser.xml
+++ b/app/src/main/res/layout/fragment_browser.xml
@@ -23,13 +23,13 @@
             android:orientation="vertical"
             android:clipChildren="false">
 
-                <org.mozilla.focus.web.IWebView
-                    android:id="@+id/webview"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:scrollbarThumbVertical="@drawable/scrollbar_thumb">
-                    <requestFocus />
-                </org.mozilla.focus.web.IWebView>
+            <org.mozilla.focus.web.IWebView
+                android:id="@+id/webview"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scrollbarThumbVertical="@drawable/scrollbar_thumb">
+                <requestFocus />
+            </org.mozilla.focus.web.IWebView>
 
         </org.mozilla.focus.widget.ResizableKeyboardCoordinatorLayout>
     </LinearLayout>
@@ -46,6 +46,13 @@
         android:layout_width="@dimen/remote_cursor_size"
         android:layout_height="@dimen/remote_cursor_size"
         android:layout_gravity="top|start"
+        />
+
+    <org.mozilla.focus.widget.FirefoxProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
         />
 
     <org.mozilla.focus.widget.BrowserNavigationOverlay
