--- a/app/src/main/res/color/overlay_button_selector.xml
+++ b/app/src/main/res/color/overlay_button_selector.xml
@@ -4,8 +4,10 @@
    - file, You can obtain one at http://mozilla.org/MPL/2.0/. -->
 
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_activated="false" android:color="@color/colorTextInactive"/>
-    <item android:state_enabled="true" android:color="@color/android:white"/>
-    <item android:state_enabled="false" android:color="@color/colorTextInactive"/>
-    <item android:color="@color/android:transparent"/>
+    <item android:state_enabled="false" android:color="@color/button_disabled"/>
+    <item android:state_pressed="true" android:color="@color/button_pressed" />
+    <item android:state_focused="true" android:color="@color/button_focused" />
+    <item android:state_selected="true" android:color="@android:color/holo_red_dark"/>
+    <item android:state_activated="false" android:color="@color/button_pressed"/>
+    <item android:state_enabled="true" android:color="@color/button_default"/>
 </selector>
