--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -48,4 +48,7 @@
 
     <dimen name="remote_cursor_size">45dp</dimen>
     <dimen name="remote_cursor_size2x">90dp</dimen>
+    <dimen name="button_size">48dp</dimen>
+    <dimen name="button_radius">24dp</dimen>
+    <dimen name="button_right_margin">24dp</dimen>
 </resources>
