Add pin resources.

--- a/app/src/main/res/layout/browser_overlay.xml
+++ b/app/src/main/res/layout/browser_overlay.xml
@@ -36,6 +36,13 @@
             android:contentDescription="@string/content_description_reload"/>
 
         <org.mozilla.focus.widget.CheckableImageButton
+            android:id="@+id/pinButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            style="@style/NavigationButton"
+            android:src="@drawable/pin_selector"/>
+
+        <org.mozilla.focus.widget.CheckableImageButton
             android:id="@+id/turboButton"
             style="@style/NavigationButton"
             android:src="@drawable/turbo_selector"
