--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -101,8 +101,9 @@
     <style name="NavigationButton" parent="Widget.AppCompat.ImageButton">
         <item name="android:layout_width">@dimen/button_size</item>
         <item name="android:layout_height">@dimen/button_size</item>
-        <item name="android:layout_marginEnd">@dimen/button_right_margin</item>
+        <item name="android:layout_marginEnd">24dp</item>
         <item name="android:padding">12dp</item>
         <item name="android:background">@drawable/circle_button_background</item>
+        <item name="android:tint">@android:color/black</item>
     </style>
 </resources>
