--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -20,7 +20,7 @@
             android:paddingBottom="50dp">
 
         <!-- TODO: analyze the params below -->
-        <org.mozilla.focus.widget.InlineAutocompleteEditText
+        x<org.mozilla.focus.widget.InlineAutocompleteEditText
                 android:id="@+id/urlInputView"
                 android:layout_width="0dp"
                 android:layout_height="40dp"
@@ -51,8 +51,7 @@
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_marginEnd="50dp"
-            android:background="@android:color/transparent"
-            android:backgroundTint="@android:color/holo_red_dark"
+            android:background="@drawable/ripple_background"
             android:contentDescription="@string/menu_settings"
             android:src="@drawable/ic_settings" />
 
